--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ TW_CONSUMER_KEY=<your-twitter-consumer-key>
 TW_CONSUMER_SECRET=<your-twitter-consumer-secret>
 TW_ACCESS_TOKEN=<your-twitter-access-token>
 TW_ACCESS_TOKEN_SECRET=<your-twitter-access-token-secret>
+
+GEMINI_API_KEY=<your-gemini-key-here>
